add Dockerfile2.2